# auto-lzt

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.en.md  README.md  RELEASE_BLOCKERS.md  dev.py  docker-compose.yml  pyproject.toml
.claude/skills/flow-from-text/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_account_status.py  0003_flow_engine.py  0004_triggers.py  0005_account_token_hash.py  0006_run_traces.py  0007_flow_templates.py  0008_run_vars.py  0009_account_label.py  0010_accounts_created_at_tz.py  0011_account_profile_and_run_error.py
app/: main.py
app/api/: account_routes.py  auth_routes.py  catalog_routes.py  composite_routes.py  deps.py  flow_routes.py  flow_status_routes.py  health_routes.py  module_routes.py  panel_preset_routes.py  panel_routes.py  plugin_routes.py  run_routes.py  task_routes.py  trigger_routes.py
app/bot/: api_client.py  config.py  dtos.py  main.py
app/bot/handlers/: catalog.py  common.py  flows.py  plugins.py
app/bot/middleware/: admin_guard.py  errors.py  rate_limit.py
app/bot/render/: pagination.py  reply.py  schema_form.py
app/cli/: __init__.py  __main__.py  client.py  commands.py  env.py  render.py
app/core/: auth.py  config.py  errors.py  events.py  exceptions.py  logging.py  schema.py  stream_token.py  streaming.py  tenant.py
app/db/: base.py
app/db/models/: __init__.py  account.py  flow.py  run.py  template.py  trigger.py
app/domain/account/: crypto.py  errors.py  events.py  exclusion.py  model.py  pool.py  repo.py  service.py
app/domain/catalog/: capabilities.py  plugins.py  registry.py
app/domain/egress/: policy.py  transport.py
app/domain/events/: router.py  types.py
app/domain/flow_engine/: __init__.py  base_node.py  compiler.py  dryrun.py  dtos.py  env_input.py  errors.py  events.py  idempotency.py  ir_node.py  model.py  params.py  path.py  repo.py  retention.py  service.py  spec.py
app/domain/market/: adapter.py  categories.py  dtos.py  errors.py  introspection.py  service.py
app/plugin_runtime/: __init__.py  contracts.py  dtos.py  errors.py  folder_source.py  index_client.py  install_service.py  manager.py  manifest.py  notifier.py  state.py  texts.py  texts.toml  update_checker.py  worker.py
app/worker/: __init__.py  __main__.py  arq_settings.py  enqueue.py  eventus_bootstrap.py  runtime.py
docs/: DEMO.en.md  DEMO.md  flow-design-guide.en.md  flow-design-guide.md  modules.en.md  modules.md  plugins.en.md  plugins.md
docs/for_ai/: index.en.md  index.md
docs/runbooks/: 2026-07-20-panel-traps.en.md  2026-07-20-panel-traps.md  README.en.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  app.css  config.ts  index.css  main.tsx  setupTests.ts
scripts/: backup.sh  install.sh  record_demo_gif.sh  restore.sh  run.sh  smoke-live.sh  smoke.sh  update.sh
seeds/: auto_reply_flow.json  killer_flow.json  load_templates.py
seeds/templates/: bump-all-lots.json  bump-single-lot.json  margin-calculator.json  percent-of.json  relist-lot.json  reprice-all-lots.json  reprice-single-lot.json  title-builder.json
tests/: conftest.py  test_market_adapter_testnet.py  test_testnet_server_fixture.py
tests/contract/: test_catalog_contract.py  test_node_capabilities.py
tests/e2e/: conftest.py  test_dev_server_flow.py  test_sse_through_nginx.py  test_task_stream_over_http.py
tests/fixtures/: flow_fakes.py  mock_lzt_server.py  query_counter.py  testnet_server.py
tests/fixtures/plugin_pkg/: pyproject.toml
tests/fixtures/plugin_pkg/src/lzt_flow_demo_plugin/: nodes.py
tests/fixtures/plugin_runtime_pkg/: pyproject.toml
tests/fixtures/plugin_runtime_pkg/src/lzt_flow_demo_runtime/: plugin.py
tests/fixtures/plugin_shadow/: pyproject.toml
tests/fixtures/plugin_shadow/src/lzt_flow_shadow_plugin/: nodes.py
tests/integration/: test_account_guarded_delete.py  test_api_key_gate.py  test_app_wiring.py  test_batch_money_guard.py  test_catalog_route.py  test_catalog_ui_hint_shape.py  test_composite_routes.py  test_dynamic_method_node.py  test_e2e_flow.py  test_failed_run_reports_its_cause.py  test_fanout_flow.py  test_flow_crud_routes.py  test_flow_end_to_end.py  test_flow_import.py  test_flow_invoke.py  test_flow_params_end_to_end.py  test_flow_status_collapse.py  test_flow_status_route.py  test_fork_join.py  test_module_import.py  test_module_registry_client.py  test_module_validator.py  test_money_under_stress.py  test_operators.py  test_optimistic_lock.py  test_panel_tab_seam.py  test_plugin_install_api.py  test_plugin_nodes.py  test_plugin_runtime_wiring.py  test_preset_routes.py  test_relist_crash_resume.py  test_request_nodes.py  test_run_event_publish.py  test_run_key_race.py  test_run_resume.py  test_run_stream_route.py  test_run_trace_capture.py  test_stop_condition_and_timeout.py  test_task_event_publish_points.py  test_task_projection.py  (+1 more)
tests/load/: locustfile.py
tests/skills/: test_flow_from_text.py
tests/unit/: test_autobump_preset.py  test_bot_catalog_menu.py  test_bot_flows_menu.py  test_bot_guard.py  test_bot_plugins_menu.py  test_bot_schema_form.py  test_cli_commands.py  test_compiler.py  test_composite_inlining.py  test_egress_policy.py  test_env_input.py  test_events.py  test_flow_event_router.py  test_logic_nodes.py  test_market_categories.py  test_market_service.py  test_params.py  test_path_resolver.py  test_plugin_folder_source.py  test_plugin_install_service.py  test_plugin_runtime.py  test_plugin_update_checker.py  test_plugin_worker.py  test_preset_registry.py  test_profile_currency.py  test_purchase_timeout.py  test_scheduler.py  test_seed_flows.py  test_seed_templates.py  test_sse_frames.py  test_stream_token.py  test_stream_token_scope.py  test_take_node.py  test_task_event_union.py  test_thread_bump_params.py  test_token_pool.py  test_triggers_repo.py  test_wave06_compiler.py
(+170 files in other folders)
