[project]
name = "lzt-flow-demo-plugin"
version = "0.1.0"
description = "Test fixture: a real distribution that adds a node through the entry point."
requires-python = ">=3.12"

# The whole plugin install story: one entry point. No plugin directory, no config, no path.
[project.entry-points."lzt_flow.nodes"]
demo = "lzt_flow_demo_plugin.nodes:REGISTRATIONS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lzt_flow_demo_plugin"]
